--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --cor1: #52998f; 
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,7 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #1B1D20;
+  background-image: linear-gradient(to bottom, black, rgb(15, 15, 15));
   color: whitesmoke;
 }
 
@@ -45,7 +49,7 @@ p {
 }
 
 .header a:hover, .footer a:hover {
-  color: violet;
+  color: var(--cor1);
 }
 
 .header .logo:hover, .footer .logo:hover {
@@ -54,9 +58,10 @@ p {
 }
 
 #home {
-  background-image: url(../public/glitch_noise_interference_153596_1920x1080.jpg);
-  /* https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZCUR-KKdBXP4ucxnyxt875KwZ1Onsf6r-sK4BtOZby9SzoNVuTdljlbz6GFVFZNQMR1A&usqp=CAU */ 
-  background-size: 100%;
+  background-image: url("/public/Picsart_22-07-16_17-23-45-813.png");
+  background-image: url(../public/Group.png);
+  background-size: auto 70%;
+  background-position: left bottom;
   background-repeat: no-repeat;
   height: 110vh;
 }
@@ -66,7 +71,7 @@ p {
 }
 
 #home .content .welcome {
-  background-image: linear-gradient(to right, purple, #8942EE);
+  background-image: linear-gradient(to right, #203d39, var(--cor1));
   padding: 10px;
   width: 250px;
   text-align: center;
@@ -77,38 +82,25 @@ p {
   text-transform: uppercase;
 }
 
-#home .contentImage {
-  background-image: url("/public/Picsart_22-07-16_17-23-45-813.png");
-  background-repeat: no-repeat;
-  background-size: auto 100%;
-  background-position: right;
-  height: 110vh;
+#home .contentImage .float1, .float2 {
+  background: var(--cor1);
+  color: white;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-radius: 4px;
 }
 
 #home .contentImage .float1 {
-  background: purple;
-  color: white;
-  width: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
   top: 470px;
-  right: 50px;
-  border-radius: 4px;
+  right: -50px;
 }
 
 #home .contentImage .float2 {
-  background: #52998f;
-  color: white;
-  width: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  top: 40px;
-  right: -410px;
-  border-radius: 4px;
+  top: 20px;
+  right: -450px;
 }
 
 #home a {
@@ -122,9 +114,10 @@ p {
 }
 
 #skills {
-  /*padding-top: calc(100vh/2);*/
-  background-image: url("/public/wp8855495-hackerman-wallpapers.jpg");
+  background: url(../public/wp8855495-hackerman-wallpapers.jpg);
+  box-shadow: inset 10px 10px 20px 0px rgba(0, 0, 0, 0.712);
   background-size: 100%;
+  /*background-attachment: fixed;*/
   background-repeat: no-repeat;
   height: 110vh;
   display: flex;
@@ -148,13 +141,18 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image: url(../public/Group\ 153\ \(1\).png);
+  background-size: 100% auto;
+  background-position: bottom;
 }
 
 #projects {
   height: 110vh;
-  background-image: url("https://miro.medium.com/max/1012/1*bN5k5RVQnXGHb-UvdOB9IA.gif");
+  background: url(../public/wp8855495-hackerman-wallpapers.jpg);
+  box-shadow: inset 10px 10px 20px 0px rgba(0, 0, 0, 0.712);
+  background-size: 100%;
+  /*background-attachment: fixed;*/
   background-repeat: no-repeat;
-  background-size: auto 50%;
   background-position: center;
   display: flex;
   justify-content: center;
@@ -176,10 +174,14 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image: url(../public/Group.png);
+  background-size: auto 70%;
+  background-position: left top;
+  background-repeat: no-repeat;
 }
 
 #contact a {
-  color: purple;
+  color: var(--cor1);
   text-decoration: none;
 }
 
@@ -202,12 +204,13 @@ p {
 }
 
 #contact .input:focus {
-  border: 3px solid purple;
+  border: 3px solid var(--cor1);
 }
 
 #contact .button {
-  border: 3px solid purple;
+  border: 3px solid var(--cor1);
   font-weight: 550;
+  color: var(--cor1);
 }
 
 @media (max-width: 500px) {
