--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --cor1: #52998f; 
+  --cor1: #0F79AF; 
 }
 
 body {
@@ -18,24 +18,13 @@ code {
     monospace;
 }
 
-::-webkit-scrollbar {
-  width: 5px;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: purple;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: violet;
-}
-
-::-webkit-scrollbar-track {
-  background: black;
-}
-
 p {
   font-size: 1.2rem;
+}
+
+.header {
+  background-color: rgba(0, 0, 0, .8) !important;
+  backdrop-filter: blur(2px);
 }
 
 .header .link {
@@ -60,6 +49,7 @@ p {
 #home {
   background-image: url("/public/Picsart_22-07-16_17-23-45-813.png");
   background-image: url(../public/Group.png);
+  background-blend-mode: hard-light;
   background-size: auto 70%;
   background-position: left bottom;
   background-repeat: no-repeat;
@@ -71,7 +61,7 @@ p {
 }
 
 #home .content .welcome {
-  background-image: linear-gradient(to right, #203d39, var(--cor1));
+  background-image: linear-gradient(to right, #002a53, var(--cor1));
   padding: 10px;
   width: 250px;
   text-align: center;
@@ -115,7 +105,7 @@ p {
 
 #skills {
   background: url(../public/wp8855495-hackerman-wallpapers.jpg);
-  box-shadow: inset 10px 10px 20px 0px rgba(0, 0, 0, 0.712);
+  box-shadow: inset 5px 5px 10px 0px rgba(0, 0, 0, 0.712);
   background-size: 100%;
   /*background-attachment: fixed;*/
   background-repeat: no-repeat;
@@ -149,7 +139,7 @@ p {
 #projects {
   height: 110vh;
   background: url(../public/wp8855495-hackerman-wallpapers.jpg);
-  box-shadow: inset 10px 10px 20px 0px rgba(0, 0, 0, 0.712);
+  box-shadow: inset 5px 5px 10px 0px rgba(0, 0, 0, 0.712);
   background-size: 100%;
   /*background-attachment: fixed;*/
   background-repeat: no-repeat;
